2010-01-28  Christian Schmitt  <chris@ilovelinux.de>

        * util/ieee1275/grub-install.in: Fix nvsetenv arguments.

2010-01-28  BVK Chaitanya  <bvk.groups@gmail.com>

	* include/grub/script_sh.h (sourcecode): Add const qualifier.
	* util/grub-script-check.c (getline): Fix empty lines case.

2010-01-28  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.in (check): Exit with fail status when one of the tests
	fails.
	* tests/example_functional_test.c (example_test): Fix reversed assert.
	* tests/example_unit_test.c (example_test): Likewise.

2010-01-28  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/10_linux.in: This script does not use any of the
	contents of gettext.sh, only the external command `gettext', so stop
	sourcing it.  (Moreover, gettext.sh isn't necessarily installed in
	the same prefix as GRUB.)
	* util/grub.d/10_kfreebsd.in: Likewise.

2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/cmdline.c (grub_cmdline_get): Fix completion in the middle
	of the line.

2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/disk.c (grub_disk_read): Fix offset computation when reading
	last sectors.

2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/hashsum.c (hash_file): Avoid possible stack overflow by
	having a 4KiB and not 32KiB buffer size.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* util/hostfs.c: Include `<errno.h>'.
	(grub_hostfs_read): Handle errors from fseeko() and fread().

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* kern/disk.c (grub_disk_read): Fix bug that would cause infinite
	loop when using read hooks on files whose size isn't sector-aligned.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	Remove unused parameter.

	* fs/iso9660.c (struct grub_iso9660_data): Remove `length' parameter.
	(grub_iso9660_open): Remove initialization of `data->length'.

2010-01-27  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub-fstest.c (fstest): Rewrite allocation, fixing a few